avoid keyboard on mobile device

--- a/src/components/StartPage.css
+++ b/src/components/StartPage.css
@@ -11,6 +11,7 @@ body {
 .app {
     text-align: center;
     height: 100vh;
+    position: relative;
 }
 
 .styleButtons {
@@ -61,7 +62,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: flex-end;
-    position: fixed;
+    position: absolute;
     left:0;
     bottom:0;
     right:0;
@@ -88,6 +89,6 @@ body {
     height: 100px;
 }
 .letter {
-    font-size: ;
+    font-size: 24px;
     font-weight: bolder;
 }
